syntax = "proto3";

message agent_query {
    string agentType = 1;
    string agentName = 2;
    string roomName = 3;
    string apiJson = 4;
    string color = 7;
    string promptDir = 8;
}

message agent_state {
    int32 agentID = 1;
}

message empty{

}

service agent{
    rpc create_agent(agent_query) returns (agent_state) {};
    rpc delete_agent(agent_state) returns (empty) {};
}